// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// Visualize: https://dbdiagram.io/d

Table institution_category {
  id integer [primary key]
  title varchar [not null]
}

Table ownership_form {
  id integer [primary key]
  title varchar [not null]
}

Table region {
  id integer [primary key]
  title varchar [not null]
}

Table institution {
  id integer [primary key]
  name varchar [not null]
  parent_id integer
  short_name varchar
  english_name varchar
  is_from_crimea bool [not null]
  registration_date varchar
  category_id integer [not null]
  ownership_form_id integer [not null]
  region_id integer [not null]
}

Ref institution_category: institution.category_id > institution_category.id
Ref institution_ownership: institution.ownership_form_id > ownership_form.id
Ref institution_region: institution.region_id > region.id

Table application_status {
  id integer [primary key]
  title varchar [not null]
}

Table study_form {
  id integer [primary key]
  title varchar [not null]
}

Table knowledge_field {
  code char [primary key]
  title varchar [not null]
}

Table speciality {
  code varchar [primary key]
  title varchar [not null]
  knowledge_field char [not null]
}

Ref knowledge_field_speciality: speciality.knowledge_field > knowledge_field.code

Table degree {
  id integer [primary key]
  title varchar [not null]
}

Table offer_type {
  id integer [primary key]
  title varchar [not null]
}

Table applicant {
  id integer [primary key]
  name varchar [not null]
  grade_components json [not null]
}

Table application {
  number_in_list integer [not null]
  status_id integer [not null]
  grade float [not null]
  priority_id integer [not null]

  offer_id integer [not null]
  user_id integer [not null]
}

Ref application_user: application.user_id > applicant.id
Ref application_offer: application.offer_id > offer.id
Ref application_status: application.status_id > application_status.id

Table offer {
  id integer [primary key]
  title varchar [not null]
  degree_id integer [not null]
  education_program varchar [not null]
  faculty varchar
  speciality_code varchar [not null]
  type_id integer [not null]
  master_type varchar
  study_form_id integer [not null]
  license_volume integer [not null]
  budgetary_places integer [not null]
}

Ref offer_study_type: offer.type_id > offer_type.id
Ref offer_study_form: offer.study_form_id > study_form.id
Ref offer_degree: offer.degree_id > degree.id
Ref offer_speciality: offer.speciality_code > speciality.code

Table offers_institutions {
  offer_id integer [not null]
  institution_id integer [not null]
}

Ref offers_many: offer.id < offers_institutions.offer_id
Ref institutions_many: institution.id < offers_institutions.institution_id
